@@ -68,6 +68,18 @@ Some More Changes, Probably Not Complete:
 - The usermanual was updated to reflect the changes in the 2.2 series
 - Tone curve: mode "automatic in XYZ" mode for "scale chroma"
 
+Lua specific changes
+
+- All asynchronous calls have been rewritten
+  - the darktable-specific implementation of yield was removed
+  - darktable.control.execute allows to execute some shell commands without blocking lua
+  - darktable.control.read allows to wait for a file to be readable without blocking lua
+  - darktable.control.sleep allows to pause the lua execution without blocking other lua threads
+- darktable.gui.libs.metadata_view.register_info allows to add new field to the metadata widget in the darkroom view
+- The TextView widget can now be created in lua, allowing input of large chunks of text
+- It is now possible to use a custom widget in the lua preference window to configure a preference
+- It is now possible to set the precision and step on slider widgets
+
 Changed Dependencies:
 
 - CMake 3.0 is now required.
